[tool.poetry]
name = "python-ddos-attack"
version = "0.1.0"
description = ""
authors = ["IceLater"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
requests = "^2.32.3"
colorama = "^0.4.6"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
